--- a/huddle-landing-page/index.html
+++ b/huddle-landing-page/index.html
@@ -18,8 +18,10 @@
 
 </head>
 <body>
-  <!-- <img src="./images/bg-mobile.svg">
-  <img src="./images/bg-desktop.svg"> -->
+  <!-- <img src="./images/bg-mobile.svg"> -->
+  <header>
+    <img src="./images/logo.svg">
+  </header>
   <main>
 
     <div class="column-1">
