--- a/huddle-landing-page/index.html
+++ b/huddle-landing-page/index.html
@@ -8,24 +8,23 @@
   <!-- Poppins Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <!-- Open Sans Font -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+  <!-- Incons -->
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <title>Frontend Mentor | Huddle landing page</title>
 
 </head>
 <body>
-  <!-- <img src="./images/bg-mobile.svg"> -->
   <header>
-    <img src="./images/logo.svg">
+    <img src="./images/logo.svg" alt="Huddle logo">
   </header>
   <main>
 
     <div class="column-1">
-      <img src="./images/illustration-mockups.svg">
+      <img src="./images/illustration-mockups.svg" alt="Illustration">
     </div> 
 
     <div class="column-2">
@@ -33,12 +32,18 @@
       <p>
         Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
         Create connections with your users as you engage in genuine discussion. 
-      <p> 
+      </p> 
       <button>Register</button>
     </div>    
 
   </main>
 
-
+  <footer>
+    <ul>
+      <li class="icon"><ion-icon name="logo-github"></ion-icon></li>
+      <li class="icon"><ion-icon name="logo-twitter"></ion-icon></li>
+      <li class="icon"><ion-icon name="logo-discord"></ion-icon></li>
+    </ul>
+  </footer>
 </body>
 </html>
