--- a/huddle-landing-page/index.html
+++ b/huddle-landing-page/index.html
@@ -40,9 +40,9 @@
 
   <footer>
     <ul>
-      <li class="icon"><ion-icon name="logo-github"></ion-icon></li>
-      <li class="icon"><ion-icon name="logo-twitter"></ion-icon></li>
-      <li class="icon"><ion-icon name="logo-discord"></ion-icon></li>
+      <li class="icon"><ion-icon name="logo-github" alt="Github logo"></ion-icon></li>
+      <li class="icon"><ion-icon name="logo-twitter" alt="Twitter logo"></ion-icon></li>
+      <li class="icon"><ion-icon name="logo-discord" alt="Discord logo"></ion-icon></li>
     </ul>
   </footer>
 </body>
