--- a/huddle-landing-page/index.html
+++ b/huddle-landing-page/index.html
@@ -40,10 +40,20 @@
 
   <footer>
     <ul>
-      <li class="icon"><ion-icon name="logo-github" alt="Github logo"></ion-icon></li>
-      <li class="icon"><ion-icon name="logo-twitter" alt="Twitter logo"></ion-icon></li>
-      <li class="icon"><ion-icon name="logo-discord" alt="Discord logo"></ion-icon></li>
+        <li class="icon">
+            <ion-icon name="logo-github"></ion-icon>
+            <span class="visually-hidden">Github</span>
+        </li>
+        <li class="icon">
+            <ion-icon name="logo-twitter"></ion-icon>
+            <span class="visually-hidden">Twitter</span>
+        </li>
+        <li class="icon">
+            <ion-icon name="logo-discord"></ion-icon>
+            <span class="visually-hidden">Discord</span>
+        </li>
     </ul>
   </footer>
+
 </body>
 </html>
