--- a/huddle-landing-page/index.html
+++ b/huddle-landing-page/index.html
@@ -37,23 +37,20 @@
     </div>    
 
   </main>
-
   <footer>
     <ul>
         <li class="icon">
-            <ion-icon name="logo-github"></ion-icon>
-            <span class="visually-hidden">Github</span>
+            <ion-icon name="logo-github" aria-label="Github logo"></ion-icon>
         </li>
         <li class="icon">
-            <ion-icon name="logo-twitter"></ion-icon>
-            <span class="visually-hidden">Twitter</span>
+            <ion-icon name="logo-twitter" aria-label="Twitter logo"></ion-icon>
         </li>
         <li class="icon">
-            <ion-icon name="logo-discord"></ion-icon>
-            <span class="visually-hidden">Discord</span>
+            <ion-icon name="logo-discord" aria-label="Discord logo"></ion-icon>
         </li>
     </ul>
-  </footer>
+</footer>
+
 
 </body>
 </html>
