--- a/nft-preview-card/index.html
+++ b/nft-preview-card/index.html
@@ -18,20 +18,25 @@
   <main>
 
     <div class="card-component">
-      <img class="nft-img" src="images/image-equilibrium.jpg" alt="nft-image-equilibrium">
+      <div class="nft-img-container">
+        <img class="nft-img" src="images/image-equilibrium.jpg" alt="nft-image-equilibrium">
+      </div>
       <h1 class="nft-name-id">Equilibrium #3429</h1>
       <p class="nft-description">Our Equilibrium collection promotes balance and calm.</p>
-      <h2 class="eth-price">
-        <img class="eth-icon" src="images/icon-ethereum.svg" alt="eth-icon">
-        0.041 ETH
-      </h2>
-      <p class="time-left">
-        <img class="clock-icon" src="images/icon-clock.svg" alt="clock-icon">
-        3 days left
-      </p>
-      <p class="time-left">
+      <div class="nft-price-container">
+        <div class="price">
+          <img class="eth-icon" src="images/icon-ethereum.svg" alt="eth-icon">
+          <h2 class="eth-price">0.041 ETH</h2>
+        </div>
+        <div class="time">
+          <img class="clock-icon" src="images/icon-clock.svg" alt="clock-icon">
+          <p class="time-left">3 days left</p>
+        </div>
+        
+      </div>
+      <p class="profile-creation">
         <img class="avatar" src="images/image-avatar.png" alt="profile-picture">
-        Creation of Jules Wyvern
+        Creation of <span class="profile-name">Jules Wyvern</span>
       </p>
     </div>
 
